--- a/github_actions_ephem_connect.cfg
+++ b/github_actions_ephem_connect.cfg
@@ -1,2 +1,9 @@
-[urls]
-base_url = https://api.github.com/
+[github]
+api_base_url = https://api.github.com/
+
+[repo]
+name = iOS-Example
+path = https://github.com/jeff-vincent/iOS-Example
+
+[runner]
+path = None
