Add start runner method

--- a/github_actions_ephem_connect.cfg
+++ b/github_actions_ephem_connect.cfg
@@ -6,4 +6,6 @@ name = iOS-Example
 path = https://github.com/jeff-vincent/iOS-Example
 
 [runner]
-path = None
+path = /Users/jdv/actions-runner
+name = iOS-Example4
+labels = test
