--- a/runner_connect.cfg
+++ b/runner_connect.cfg
@@ -7,5 +7,5 @@ path = https://github.com/jeff-vincent/iOS-Example
 
 [runner]
 path = /Users/jdv/actions-runner
-name = iOS-Example6
+name = iOS-Example
 labels = test
