--- a/runner_connect.cfg
+++ b/runner_connect.cfg
@@ -1,5 +1,7 @@
 [github]
 api_base_url = https://api.github.com/
+runner_download_url = https://github.com/actions/runner/releases/download/v2.275.1/actions-runner-osx-x64-2.275.1.tar.gz
+download_name = actions-runner-osx-x64-2.275.1.tar.gz
 
 [repo]
 name = iOS-Example
